<resources>
    <string name="app_name">Muton</string>
    <string name="start_label">START</string>
    <string name="stop_label">STOP</string>
    <string name="face_visual_ready">Visual ready</string>
    <string name="face_visual_loading">Visual...</string>
    <string name="face_visual_result">Visual: %1$s</string>
    <string name="live_status_ready">\uC11C\uBC84 \uC5F0\uACB0 \uC900\uBE44 \uC911</string>
    <string name="live_status_listening">\uC2E4\uC2DC\uAC04 \uBD84\uC11D \uC911</string>
    <string name="live_status_summary">대화 요약 생성 중</string>
    <string name="live_status_saved">\uC624\uB298 \uAE30\uB85D \uC800\uC7A5 \uC644\uB8CC</string>
    <string name="live_status_offline">\uC11C\uBC84 \uC5F0\uACB0 \uD655\uC778 \uD544\uC694</string>
    <string name="stt_listening">\uB4E3\uB294 \uC911...</string>
    <string name="stt_waiting">\uC790\uB9C9 \uB300\uAE30 \uC911...</string>
    <string name="streaming_begin">\uBD84\uC11D \uC2DC\uC791...</string>
    <string name="streaming_stopped">\uC911\uC9C0\uB428</string>
    <string name="streaming_stopped_detail">\uBD84\uC11D\uC774 \uBA48\uCDB0\uC2B5\uB2C8\uB2E4.</string>
    <string name="server_load_failed">\uC11C\uBC84 \uC8FC\uC18C\uB97C \uBD88\uB7EC\uC624\uC9C0 \uBABB\uD588\uC2B5\uB2C8\uB2E4.</string>
    <string name="server_response_error">\uC11C\uBC84 \uC8FC\uC18C \uC751\uB2F5 \uC624\uB958: %1$d</string>
    <string name="server_empty">\uC11C\uBC84 \uC8FC\uC18C\uAC00 \uC544\uC9C1 \uBE44\uC5B4 \uC788\uC2B5\uB2C8\uB2E4.</string>
    <string name="server_ready">\uC11C\uBC84 \uC5F0\uACB0 \uC900\uBE44 \uC644\uB8CC</string>
    <string name="server_parse_failed">\uC11C\uBC84 \uC8FC\uC18C \uD30C\uC2F1 \uC2E4\uD328</string>
    <string name="server_not_loaded">\uC11C\uBC84 \uC8FC\uC18C\uB97C \uC544\uC9C1 \uBABB \uBD88\uB7EC\uC654\uC2B5\uB2C8\uB2E4.</string>
    <string name="server_retrying">\uC11C\uBC84 \uC8FC\uC18C \uC7AC\uC2DC\uB3C4 \uC911...</string>
    <string name="fusion_no_visual">\uC2DC\uAC01 \uC815\uBCF4 \uC5C6\uC74C (\uC74C\uC131\uB9CC \uBD84\uC11D \uC911)</string>
    <string name="fusion_low_confidence">\uBD84\uC11D \uC911 (\uD655\uC2E0\uB3C4 \uB0AE\uC74C)</string>
    <string name="fusion_collecting">\uC815\uBCF4 \uC218\uC9D1 \uBC0F \uBD84\uC11D \uC911...</string>
    <string name="fusion_failed">\uBD84\uC11D \uC2E4\uD328 (\uC11C\uBC84 \uBAA8\uB378 \uC624\uB958)</string>
    <string name="fusion_detected">\uAC10\uC9C0: %1$s (%2$d%%)</string>
    <string name="permission_required">\uCE74\uBA54\uB77C\uC640 \uB9C8\uC774\uD06C \uAD8C\uD55C\uC774 \uD544\uC694\uD569\uB2C8\uB2E4.</string>
    <string name="audio_permission_missing">\uB9C8\uC774\uD06C \uAD8C\uD55C\uC774 \uC5C6\uC5B4 STT\uB97C \uC2DC\uC791\uD560 \uC218 \uC5C6\uC5B4\uC694.</string>
    <string name="audio_record_init_failed">\uB9C8\uC774\uD06C \uCD08\uAE30\uD654\uC5D0 \uC2E4\uD328\uD574\uC11C STT\uB97C \uC2DC\uC791\uD558\uC9C0 \uBABB\uD588\uC5B4\uC694.</string>
    <string name="audio_record_start_failed">\uB9C8\uC774\uD06C \uB179\uC74C \uC2DC\uC791\uC5D0 \uC2E4\uD328\uD574\uC11C STT\uAC00 \uC911\uB2E8\uB410\uC5B4\uC694.</string>
    <string name="audio_read_failed">\uB9C8\uC774\uD06C \uC785\uB825\uC744 \uC77D\uC9C0 \uBABB\uD574 STT\uAC00 \uBA48\uCDB0\uC5B4\uC694.</string>
    <string name="audio_server_failed">STT \uC11C\uBC84\uC5D0 \uC624\uB514\uC624\uB97C \uBCF4\uB0B4\uC9C0 \uBABB\uD588\uC5B4\uC694.</string>
    <string name="audio_server_response_error">STT \uC11C\uBC84 \uC751\uB2F5 \uC624\uB958: %1$d</string>
    <string name="audio_parse_failed">STT \uC11C\uBC84 \uC751\uB2F5\uC744 \uD574\uC11D\uD558\uC9C0 \uBABB\uD588\uC5B4\uC694.</string>
    <string name="audio_empty_transcript">\uC790\uB9C9 \uB300\uAE30 \uC911...</string>
    <string name="audio_debug_prefix">debug: %1$s</string>
    <string name="splash_brand">muton</string>
    <string name="splash_mu">mu</string>
    <string name="splash_ton">ton</string>
    <string name="splash_tagline">Read the room. Keep the tone warm.</string>
    <string name="login_title">\uB2E4\uC2DC \uB9CC\uB098\uC11C \uBC18\uAC00\uC6CC\uC694</string>
    <string name="login_subtitle">\uAC10\uC815 \uB9E5\uB77D\uC744 \uC77D\uB294 \uB300\uD654 \uBCF4\uC870\uB97C \uBC14\uB85C \uC2DC\uC791\uD574\uBCF4\uC138\uC694.</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_action">\uB85C\uADF8\uC778</string>
    <string name="login_secondary">sign up</string>
    <string name="login_empty_fields">아이디와 비밀번호를 입력해주세요.</string>
    <string name="login_failed">로그인에 실패했어요: %1$s</string>
    <string name="signup_title">sign up</string>
    <string name="signup_name">\uC774\uB984</string>
    <string name="signup_password_confirm">\uBE44\uBC00\uBC88\uD638 \uD655\uC778</string>
    <string name="signup_complete">complete</string>
    <string name="signup_password_mismatch">비밀번호가 서로 달라요.</string>
    <string name="signup_password_short">비밀번호는 6자 이상이어야 해요.</string>
    <string name="signup_nickname_taken">다른 사용자가 사용중입니다.</string>
    <string name="signup_failed">회원가입에 실패했어요: %1$s</string>
    <string name="signup_voice_required">목소리 녹음을 완료해야 회원가입할 수 있어요.</string>
    <string name="firebase_not_configured">Firebase 설정 파일이 아직 연결되지 않았어요. google-services.json을 app 폴더에 넣어주세요.</string>
    <string name="terms_all">\uC774\uC6A9\uC57D\uAD00 \uC804\uCCB4 \uB3D9\uC758</string>
    <string name="terms_camera">\uCE74\uBA54\uB77C \uB3D9\uC758</string>
    <string name="terms_mic">\uB9C8\uC774\uD06C \uB3D9\uC758</string>
    <string name="record_title">\uBAA9\uC18C\uB9AC\uB97C \uB179\uC74C\uD574\uC8FC\uC138\uC694</string>
    <string name="record_timer">00:00</string>
    <string name="record_sample">\u201C\uC548\uB155\uD558\uC138\uC694 \uC88B\uC740 \uD558\uB8E8\uC785\uB2C8\uB2E4\u201D</string>
    <string name="record_denied">\uB9C8\uC774\uD06C \uAD8C\uD55C\uC774 \uD5C8\uC6A9\uB418\uC5B4\uC57C \uC74C\uC131 \uB179\uC74C \uC548\uB0B4\uB97C \uC9C4\uD589\uD560 \uC218 \uC788\uC5B4\uC694.</string>
    <string name="camera_denied">\uCE74\uBA54\uB77C \uAD8C\uD55C\uC774 \uD5C8\uC6A9\uB418\uC5B4\uC57C \uB77C\uC774\uBE0C \uBD84\uC11D\uC744 \uC2DC\uC791\uD560 \uC218 \uC788\uC5B4\uC694.</string>
    <string name="record_start">\uC2DC\uC791</string>
    <string name="record_stop">\uC815\uC9C0</string>
    <string name="recording_now">\uB179\uC74C \uC911...</string>
    <string name="home_title">\uC624\uB298\uC758 \uB300\uD654 \uC900\uBE44 \uC644\uB8CC</string>
    <string name="home_subtitle">\uC2E4\uC2DC\uAC04 \uCE74\uBA54\uB77C \uBD84\uC11D, STT, \uC694\uC57D \uD750\uB984\uC744 \uD55C\uACF3\uC5D0\uC11C \uC2DC\uC791\uD558\uC138\uC694.</string>
    <string name="home_greeting">오늘은 어떤 대화를 해볼까요?</string>
    <string name="home_camera_on">camera on</string>
    <string name="home_sample">sample</string>
    <string name="home_menu_settings">setting</string>
    <string name="home_menu_trash">trash</string>
    <string name="home_card_live_title">Live Capture</string>
    <string name="home_card_live_body">\uCE74\uBA54\uB77C\uC640 \uC74C\uC131\uC744 \uB3D9\uC2DC\uC5D0 \uBD84\uC11D\uD574 \uD604\uC7A5 \uB300\uD654\uB97C \uC77D\uC2B5\uB2C8\uB2E4.</string>
    <string name="home_card_settings_title">Settings</string>
    <string name="home_card_settings_body">\uAE00\uC790 \uD06C\uAE30, \uC54C\uB9BC, \uACC4\uC815 \uC0C1\uD0DC\uB97C \uC815\uB9AC\uD569\uB2C8\uB2E4.</string>
    <string name="home_card_journal_title">Conversation Journal</string>
    <string name="home_card_journal_body">\uCD5C\uADFC \uBD84\uC11D \uACB0\uACFC\uC640 \uC694\uC57D\uC744 \uB2E4\uC2DC \uD655\uC778\uD569\uB2C8\uB2E4.</string>
    <string name="home_open_live">\uB77C\uC774\uBE0C \uD654\uBA74 \uC5F4\uAE30</string>
    <string name="home_open_settings">\uC124\uC815 \uC5F4\uAE30</string>
    <string name="home_favorite_empty">\uBCC4\uD45C\uD55C \uAE30\uB85D\uC774 \uC5C6\uC5B4\uC694.</string>
    <string name="camera_waiting_user">\uB9D0\uC500\uC774 \uB4E4\uC5B4\uC624\uBA74 \uC790\uB9C9\uC774 \uC5EC\uAE30\uC5D0 \uC313\uC5EC\uC694.</string>
    <string name="camera_waiting_reply">\uAC10\uC815 \uD750\uB984\uC744 \uC77D\uACE0 \uC694\uC57D \uBB38\uC7A5\uC744 \uBC14\uB85C \uBCF4\uC5EC\uB4DC\uB9B4\uAC8C\uC694.</string>
    <string name="camera_sample_user">\uB108 \uC624\uB298 \uC0DD\uC77C\uC774\uC5C8\uB098? \uBBF8\uC548 \uAE4C\uBA39\uC5C8\uB2E4.</string>
    <string name="camera_sample_reply">\uBBF8\uC548\uD574\uC11C \uC548\uC808\uBD80\uC808\uD568</string>
    <string name="camera_saved_caption">\uC624\uB298 \uB300\uD654\uAC00 \uCE98\uB9B0\uB354\uC5D0 \uAE30\uB85D\uB410\uC5B4\uC694.</string>
    <string name="calendar_title">March 2026</string>
    <string name="calendar_records">%1$d records</string>
    <string name="calendar_empty">\uC624\uB298 \uC800\uC7A5\uB41C \uAE30\uB85D\uC774 \uC544\uC9C1 \uC5C6\uC5B4\uC694.</string>
    <string name="calendar_fallback_title">\uB300\uD654 \uC694\uC57D \uAE30\uB85D</string>
    <string name="calendar_fallback_subtitle">\uC2E4\uC2DC\uAC04 \uC790\uB9C9\uC774 \uAE30\uB85D\uB410\uC5B4\uC694.</string>
    <string name="record_detail_intro">대화기록입니다.</string>
    <string name="trash_title">trash</string>
    <string name="trash_empty">삭제한 기록이 없어요.</string>
    <string name="settings_title">\uC124\uC815</string>
    <string name="settings_subtitle">\uC571 \uC0AC\uC6A9 \uD658\uACBD\uACFC \uACC4\uC815 \uC0C1\uD0DC\uB97C \uAC00\uBC8D\uAC8C \uC870\uC815\uD558\uC138\uC694.</string>
    <string name="settings_notifications">\uC2E4\uC2DC\uAC04 \uC54C\uB9BC</string>
    <string name="settings_text_size">size</string>
    <string name="settings_account">\uACC4\uC815 \uAD00\uB9AC</string>
    <string name="settings_logout">\uB85C\uADF8\uC544\uC6C3</string>
    <string name="settings_user_placeholder">user</string>
    <string name="settings_edit_profile">Edit profile</string>
    <string name="settings_change_password">Change password</string>
    <string name="settings_resummarize_records">Re-summarize records</string>
    <string name="settings_dark_mode">Dark mode</string>
    <string name="settings_resummarize_title">Re-summarize records</string>
    <string name="settings_resummary_guide_default">요약을 다시 만들 기록을 선택해주세요.</string>
    <string name="settings_resummary_guide">%1$d개 선택됨</string>
    <string name="settings_resummary_empty">다시 요약할 기록이 아직 없어요.</string>
    <string name="settings_resummarize_action">선택한 기록 다시 요약</string>
    <string name="settings_resummary_select_required">기록을 하나 이상 선택해주세요.</string>
    <string name="settings_resummary_api_missing">OpenAI API 키가 설정되어 있지 않아요.</string>
    <string name="settings_resummary_progress">%1$d / %2$d 기록 다시 요약 중</string>
    <string name="settings_resummary_done">%1$d개 기록 요약을 다시 만들었어요.</string>
    <string name="settings_resummary_failed_default">기록 다시 요약에 실패했어요. API 키, 결제, 네트워크 상태를 확인해주세요.</string>
    <string name="settings_change_password_title">새로운 비밀번호를 설정해주세요.</string>
    <string name="settings_current_password">현재 비밀번호</string>
    <string name="settings_new_password">새 비밀번호</string>
    <string name="settings_confirm_password">비밀번호 확인</string>
    <string name="settings_change_action">change</string>
    <string name="settings_profile_image">프로필 이미지</string>
    <string name="settings_new_name">새 이름</string>
    <string name="settings_profile_empty">이름을 입력해주세요.</string>
    <string name="settings_profile_saved">프로필이 저장됐어요.</string>
    <string name="settings_profile_failed">프로필 저장에 실패했어요: %1$s</string>
    <string name="settings_password_user_missing">로그인이 필요해요.</string>
    <string name="settings_password_saved">비밀번호가 변경됐어요.</string>
    <string name="settings_password_failed">비밀번호 변경에 실패했어요: %1$s</string>
    <string name="settings_current_password_wrong">현재 비밀번호가 맞지 않아요.</string>
</resources>
